# VulkanAnimationTest

./: CMakeLists.txt  README.md
resource/: index.txt  index3.txt  vertex.txt  vertex2.txt  vertex3.txt
shaders/: frag.spv  fragment.frag  vert.spv  vert2.spv  vertex.vert
source/: AnimationApp.h  VulkanApp.cpp  VulkanApp.h  VulkanPipeline.cpp  VulkanPipeline.h  main.cpp
utils/: utils.ipynb
utils/.ipynb_checkpoints/: utils-checkpoint.ipynb
